demo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: keycloak
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 8090
